# flask-websockets

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
docs/source/: .readthedocs.requirements.txt  api_reference.rst  conf.py  http_server_support.rst  index.rst  quickstart.rst
examples/: gevent.py  simple_flask_example.py
examples/chat_application/: app.py
examples/chat_application/templates/: index.html
src/flask_channels/: channels.py
src/flask_websockets/: __init__.py  websocket.py  websockets.py
tests/: test_client_server_integration.py  test_flask_sock.py
