[project]
name = "flask-websockets"
version = "0.1.0"
description = "A WebSockets and channels implementation for Flask"
authors = [
    {name = "ch-iv", email = "alicesummer38@gmail.com"},
]
dependencies = [
    "simple-websocket>=1.0.0",
    "flask>=3.0.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "coverage>=7.5.4",
    "covdefaults>=2.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "gunicorn>=22.0.0",
    "eventlet>=0.36.1",
    "gevent>=24.2.1",
    "waitress>=3.0.0",
    "websocket-client>=1.8.0",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20240622",
    "multiprocess>=0.70.16",
]
lint = [
    "mypy>=1.10.1",
    "pyright>=1.1.369",
    "ruff>=0.5.0",
    "slotscheck>=0.19.0",
]
dev = [
    "pre-commit>=3.7.1",
]
docs = [
    "sphinx>=7.1.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.2",
    "sphinx-toolbox>=3.5.0",
    "sphinx-design>=0.5.0",
    "sphinx-click>=4.4.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "auto-pytabs[sphinx]>=0.4.0",
    "sphinx-paramlinks>=0.6.0",
    "mkdocstrings[python]>=0.25.1",
    "shibuya>=2024.6.23",
]

[tool.mypy]
packages = ["flask_websockets", "tests", "examples"]
python_version = "3.12"
disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = false
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pyright]
disableBytesTypePromotions = true
include = ["flask_websockets", "tests", "examples"]
pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComments = true

[tool.slotscheck]
strict-imports = false

[tool.ruff]
lint.select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "ERA", # eradicate
  "EXE", # flake8-executable
  "F", # pyflakes
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "N", # pep8-naming
  "PIE", # flake8-pie
  "PLC", # pylint - convention
  "PLE", # pylint - error
  "PLW", # pylint - warning
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "W", # pycodestyle - warning
  "YTT", # flake8-2020
]

line-length = 120
lint.ignore = [
  "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
  "B010", # flake8-bugbear - do not call setattr with a constant attribute value
  "D100", # pydocstyle - missing docstring in public module
  "D101", # pydocstyle - missing docstring in public class
  "D102", # pydocstyle - missing docstring in public method
  "D103", # pydocstyle - missing docstring in public function
  "D104", # pydocstyle - missing docstring in public package
  "D105", # pydocstyle - missing docstring in magic method
  "D106", # pydocstyle - missing docstring in public nested class
  "D107", # pydocstyle - missing docstring in __init__
  "D202", # pydocstyle - no blank lines allowed after function docstring
  "D205", # pydocstyle - 1 blank line required between summary line and description
  "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
  "E501", # pycodestyle line too long, handled by ruff format
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "RUF012", # Ruff-specific rule - annotated with classvar
  "ISC001", # Ruff formatter incompatible
  "S101", # Use of `assert` detected
]
src = ["flask_websockets", "tests", "examples"]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["flask_websockets", "tests", "examples"]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
